--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -11,7 +11,7 @@
     }
   },
   "AllowedHosts": "*",
-  
+  "FMPKey": "ESznLMLlqnOvaLqnFFXnZ9LNbq4S8caR",
   "JWT": {
     "Issuer": "http://localhost:5246",
     "Audience": "http://localhost:5246",
